--- a/app/build.gradle
+++ b/app/build.gradle
@@ -338,6 +338,7 @@ dependencies {
   implementation project(path: ':aptoide-analytics-default-implementation')
   implementation project(path: ':dataprovider')
   implementation project(path: ':utils')
+  implementation project(path: ':packageinstaller')
 
   // Testing-only dependencies
   testImplementation "junit:junit:${JUNIT_VERSION}"
